# SIU-Python-Assessment

./: main.py  pyproject.toml
problems/: pb1.py  pb2.py  pb3.py
