[tool.poetry]
name = "repl-nix-siu-python-assessment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_siu_python_assessment"}]

[tool.poetry.dependencies]
python = "^3.12"
schettino = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
